testcases/error/undefined_identifier.veryl
module undefined_identifier {
    let _a: logic = x;
}
